@@ -31,7 +31,7 @@ Imports:
 Suggests:
     testthat,
     rpart
-LazyData: yes
 ByteCompile: yes
-Version: 0.1.1
-RoxygenNote: 7.1.1
+Encoding: UTF-8
+Version: 0.1.2
+RoxygenNote: 7.2.1
